0.6.4
- Bugfixes:
  - Batch analysis: Individual measurement parameters not preserved (#96)
- New filter hierarchy allows to investigate subpopulations (#87, #63)
0.6.3
- Bugfixes:
  - Regression: Excluded events plotted on top of filtered events (#86)
  - PDF plot export: Scatter inspector event highlighted (#92)
- Implement differential (w.r.t. reservoir) linear-mixed models
  analysis with bootstrapping (#88)
0.6.2
- Add batch filter processing
- Move statistics computation to dclab (0.1.7dev12):
  - New columns: "Flow rate", "%-gated"
- Bugfixes:
  - Windows: Saving session on different drive than data causes ValueError
  - Memory leak: Re-plotting scatter plots (`ControlPanel.OnChangeFilter`)
  - Handle plots where all events are filtered correctly
  - Scatter plots: False filtered events shown in gray
  - dclab (0.1.7dev9): Faulty hashing strategy in
    `RTDC_DataSet.GetDownSampledScatter`
  - dclab:
    - Corrections/additions in definitions (fRT-DC)
0.6.1
- Load session: Allow user to select missing data files (#80)
- Sessions: Store relative paths in index file for user convenience (#80)
- Bugfixes:
  - Setting order of plots not possible in Windows (#79)
  - Inability to search measurements due to broken data files (#81)
0.6.0
- Compute mode in statistics tab using Freedman-Diaconis rule (#72)
- Add channels: bounding box x- and y-size
- Display number of events in measurement browser (#70)
- Bugfixes:
  - "KeyError: 'Plotting'" when filtering (#73)
  - "AttributeError" when plotting 2col 1row without legend (#76)
0.5.9
- dclab add channel: distance between two first peaks
- Allow logarithmic plot axes (#56)
- Display fluorescence curve of events (#65)
- Bugfixes:
  - OpenCV version 2 vs 3 variable name differences (CV_CAP_...)
  - Gray dots in PDF export too large (#69)
0.5.8
- dclab add fluorescence channels: peak area, peak position, number of peaks
- dclab add position along channel axis from img
- dclab (0.1.6.dev2): Allow to disable KDE computation