@@ -66,6 +66,10 @@ Contour Width = 2.3
 # Kernel density estimators
 KDE = "Gauss" # Kernel Density Estimate, can also be "Multivariate" or "None"
 
+# Legend plot
+Legend Plot = True
+Legend Autoscaled = True
+
 # standard variables that are sensible
 Defo Max = 0.2
 Circ Min = 0.8
